--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
   text-align: center;
+  background-image: url('https://starwalk.space/gallery/images/what-is-space/1920x1080.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .App-logo {
